fix issues on iphone rendering

--- a/styles/mobile.css
+++ b/styles/mobile.css
@@ -45,4 +45,10 @@
     margin-top: 1em;
   }
 
+  .look_down {
+    visibility: hidden;
+    display: none;
+  }
+
+
 }
